Fixed aligment in "Ordene en línea aquí" button

--- a/PizzaJuan/Views/Home/Index.cshtml
+++ b/PizzaJuan/Views/Home/Index.cshtml
@@ -8,7 +8,9 @@
 
 <body>
     <h1>PIZZA JUAN</h1>
-    <button id="orderHereButton">Ordene en línea aquí</button>
+    <div>
+        <button id="orderHereButton">Ordene en línea aquí</button>
+    </div>
     <hr/>
     <img src="~/images/home/pizzaHome.jpg" class="img-fluid" alt="Responsive image">
 </body>
