--- a/PizzaJuan/Content/homePageAccess.css
+++ b/PizzaJuan/Content/homePageAccess.css
@@ -9,8 +9,11 @@
     color: #F48B4A;
     height: 3rem;
     width: 16rem;
-    font-size: 20px;
-    margin-left: 38%;
+    margin: auto;
+    position: relative;
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
 }
 
 #orderHereButton:hover {
