--- a/PizzaJuan/Views/Pizza/CreatePizza.cshtml
+++ b/PizzaJuan/Views/Pizza/CreatePizza.cshtml
@@ -34,7 +34,7 @@
 
     <div class="row d-flex">
         <div class="col-xl-4 offset-2">
-            <p id="debitAmount" class="debitAmountHolder">0</p>
+            <p id="debitAmount" class="debitAmountHolder">₡0</p>
         </div>
         <div class="col-xl-4 offset-1">
             <button id="addToCart">Agregar</button>
