--- a/PizzaJuan/Content/combos.css
+++ b/PizzaJuan/Content/combos.css
@@ -28,3 +28,19 @@ button:hover {
 .combosDescription {
     font-size: 25px;
 }
+
+#backMenu {
+    background-color: #A20021;
+    border-color: white;
+    color: white;
+    height: 3rem;
+    width: 16rem;
+    margin: 0.5rem;
+}
+
+    #backMenu:hover {
+        background-color: #6b2433;
+        border-color: white;
+        color: white;
+        cursor: pointer;
+    }
