HU4: Linked views of ComboOptions, ChoosingBeverage, ChoosePizza and CreatePizza to menu and viceversa

--- a/PizzaJuan/Views/Pizza/ChoosePizza.cshtml
+++ b/PizzaJuan/Views/Pizza/ChoosePizza.cshtml
@@ -40,7 +40,7 @@
             <button id="addToCart">Agregar</button>
         </div>
         <div class="col-xl-2 offset-9">
-            <button id="backMenu">Devolverse al menu</button>
+            <button id="backMenu" onclick="location.href='/Menu/Menu'" type="button">Devolverse al menu</button>
         </div>
     </div>
     <script src="~/Scripts/createPizza.js"></script>
