--- a/PizzaJuan/Views/Combo/ComboOptions.cshtml
+++ b/PizzaJuan/Views/Combo/ComboOptions.cshtml
@@ -15,7 +15,7 @@
 
     <div class="row d-flex">
         <div class="col-xl-2 offset-9">
-            <button id="backMenu">Devolverse al menu</button>
+            <button id="backMenu" onclick="location.href='/Menu/Menu'" type="button">Devolverse al menu</button>
         </div>
     </div>
     <script src="~/Scripts/createPizza.js"></script>
