HU4: Adding elements to order

--- a/PizzaJuan/Views/Home/Index.cshtml
+++ b/PizzaJuan/Views/Home/Index.cshtml
@@ -22,11 +22,11 @@
                 </div>
                 <div class="modal-body">
                     <div>
-                        <button class="button-center" id="expressOption">Express</button>
+                        <button class="button-center" id="expressOption" onclick="location.href='/Delivery/Express'" type="button">Express</button>
                     </div>
                     <br />
                     <div>
-                        <button class="button-center" id="driveThroughOption">Para Llevar</button>
+                        <button class="button-center" id="driveThroughOption" onclick="location.href='/Delivery/Takeout'" type="button">Para Llevar</button>
                     </div>
                 </div>
             </div>
