--- a/PizzaJuan/Views/Combo/ComboOptions.cshtml
+++ b/PizzaJuan/Views/Combo/ComboOptions.cshtml
@@ -6,9 +6,9 @@
     <h1 id="title">Combos</h1>
     <div class="row d-flex">
         @foreach (var item in ViewBag.Combos) {
-            <div class="col-12 d-flex border border-3 mt-3">
-                <p class="col-9 combosDescription">@item.Name: @item.Value[0]</p>
-                <button class="col-3 combos" onclick="activeCheck()" value="@item.Value[1]">₡@item.Value[1]</button>
+            <div class="col-12 d-flex border border-2 border-dark mt-3">
+                <p class="col-9 combosDescription mt-3">@item.Name: @item.Value[0]</p>
+                <button class="col-3 combos mt-2" onclick="activeCheck()" value="@item.Value[1]">₡@item.Value[1]</button>
             </div>
         }
     </div>
