--- a/PizzaJuan/Views/Drink/ChooseBeverage.cshtml
+++ b/PizzaJuan/Views/Drink/ChooseBeverage.cshtml
@@ -1,4 +1,5 @@
-﻿<head>
+﻿@model PizzaJuan.Models.ProductModel
+<head>
     <link rel="stylesheet" href="~/Content/createPizza.css">
 </head>
 
@@ -17,7 +18,12 @@
             <p id="debitAmount" class="debitAmountHolder">₡0</p>
         </div>
         <div class="col-xl-4 offset-1">
-            <button id="addToCart">Agregar</button>
+            @using (Html.BeginForm("PostAddToOrder", "JsonParser", FormMethod.Post, new { enctype = "multipart/form-data" })) {
+                @Html.AntiForgeryToken()
+                @Html.TextBoxFor(model => model.Price, new { @class = "d-none", @id = "priceModel" })
+                @Html.TextBoxFor(model => model.Description, new { @class = "d-none", @id = "descriptionModel" })
+                <button type="submit" id="addToCart">Agregar</button>
+            }
         </div>
         <div class="col-xl-2 offset-9">
             <button id="backMenu" onclick="location.href='/Menu/Menu'" type="button">Devolverse al menu</button>
