--- a/PizzaJuan/Views/Menu/Menu.cshtml
+++ b/PizzaJuan/Views/Menu/Menu.cshtml
@@ -22,7 +22,7 @@
     </div>
     <div class="row d-flex">
         <div class="col-4 d-flex offset-4">
-            <p class="col-12 border border-2 border-dark text-center pt-2">Costo: </p>
+            <p class="col-12 border border-2 border-dark text-center pt-2">Costo: @ViewBag.DebitAmount</p>
         </div>
     </div>
     <div class="row d-flex">
