HU7: Order items displaying

--- a/PizzaJuan/Views/Menu/Menu.cshtml
+++ b/PizzaJuan/Views/Menu/Menu.cshtml
@@ -27,7 +27,7 @@
     </div>
     <div class="row d-flex">
         <div class="col-4 d-flex offset-4">
-            <button class="col-12">Ir a orden</button>
+            <button class="col-12" onclick="location.href='/Menu/Order'" type="button">Ir a orden</button>
         </div>
     </div>
 </body>
