HU7: Receipt view implemented

--- a/PizzaJuan/Views/Menu/Order.cshtml
+++ b/PizzaJuan/Views/Menu/Order.cshtml
@@ -26,7 +26,7 @@
             <p id="debitAmount" class="debitAmountHolder">Total: @ViewBag.DebitAmount</p>
         </div>
         <div class="col-xl-4 offset-1">
-            <button type="submit" id="pay">Pagar</button>
+            <button type="submit" id="pay" onclick="location.href='/Menu/Receipt'">Pagar</button>
         </div>
     </div>
 
