--- a/PizzaJuan/Views/Menu/Order.cshtml
+++ b/PizzaJuan/Views/Menu/Order.cshtml
@@ -21,6 +21,13 @@
         </div>
     }
 
+    <div class="row d-flex">
+        <div class="col-12 d-flex border border-2 border-dark mt-3">
+            <p class="col-7 itemDescription mt-3">@ViewBag.Delivery[0].Type</p>
+        </div>
+    </div>
+
+
     <div class="row">
         <div class="col-xl-4 offset-2">
             <p id="debitAmount" class="debitAmountHolder">Total: @ViewBag.DebitAmount</p>
