--- a/PizzaJuan/Views/Delivery/Takeout.cshtml
+++ b/PizzaJuan/Views/Delivery/Takeout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE HTML>
+﻿@model PizzaJuan.Models.DeliveryModel
+<!DOCTYPE HTML>
 <html>
 <head>
     <link rel="stylesheet" href="~/Content/takeout.css">
@@ -7,19 +8,23 @@
 
 <body>
     <h1>Escoger el restaurante para recoger</h1>
-    <div class="row d-flex">
-        @foreach (var item in ViewBag.Restaurants) {
-            <div class="choosingRestaurant col-12 d-flex border border-2 border-dark mt-3" onclick="location.href='/Menu/Menu'">
-                <p class="col-11 combosDescription mt-3">
-                    <i class="fas fa-map-marker-alt"></i>
-                    @item.Name: @item.Value
-                </p>
-                <p class="col-1 combosDescription mt-3 text-end">
-                    <i class="fas fa-angle-right"></i>
-                </p>
-            </div>
-        }
-    </div>
+    @using (Html.BeginForm("PostDelivery", "Delivery", FormMethod.Post, new { enctype = "multipart/form-data" })) {
+        @Html.AntiForgeryToken()
+        @Html.TextBoxFor(model => model.Type, new { @class = "d-none", @Value = "Takeout" })
+        <div class="row d-flex">
+            @foreach (var item in ViewBag.Restaurants) {
+                <button class="choosingRestaurant col-12 d-flex border border-2 border-dark mt-3" type="submit">
+                    <p class="col-11 text-md-start mt-3">
+                        <i class="fas fa-map-marker-alt"></i>
+                        @item.Name: @item.Value
+                    </p>
+                    <p class="col-1 combosDescription mt-3 text-end">
+                        <i class="fas fa-angle-right"></i>
+                    </p>
+                </button>
+            }
+        </div>
+    }
 </body>
 </html>
 
