Clean code: Eliminated unnecesary methods from controllers, remove two unused views

--- a/PizzaJuan/Views/Drink/ChooseBeverage.cshtml
+++ b/PizzaJuan/Views/Drink/ChooseBeverage.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PizzaJuan.Models.ProductModel
 <head>
-    <link rel="stylesheet" href="~/Content/createPizza.css">
+    <link rel="stylesheet" href="~/Content/pizzaAndBeverage.css">
 </head>
 
 <body>
