--- a/PizzaJuan/Views/Pizza/CreatePizza.cshtml
+++ b/PizzaJuan/Views/Pizza/CreatePizza.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PizzaJuan.Models.ProductModel
 <html>
 <head>
-    <link rel="stylesheet" href="~/Content/createPizza.css">
+    <link rel="stylesheet" href="~/Content/pizzaAndBeverage.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 
