Deleted extra css specifications that were not in use

--- a/PizzaJuan/Views/Shared/_Layout.cshtml
+++ b/PizzaJuan/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav center">
                     <li class="nav-item align-self-center">
-                        <a id="orderHere" class="nav-link align-self-center" aria-current="page" href="~/Home/Index">Volver a inicio</a>
+                        <a id="home" class="nav-link align-self-center" aria-current="page" href="~/Home/Index">Volver a inicio</a>
                     </li>
                 </ul>
             </div>
